--- a/ru/toc.yaml
+++ b/ru/toc.yaml
@@ -332,7 +332,7 @@ items:
                 href: guide/concepts/efficiency-metrics/interface-quality.md
               - name: Контрольные задания
                 href: guide/concepts/efficiency-metrics/control-tasks-share.md
-              - name: Общение
+              - name: Общение с исполнителями
                 href: guide/concepts/efficiency-metrics/communication.md
               - name: Отклоненные задания
                 href: guide/concepts/efficiency-metrics/rejected-tasks.md
