DOCSUP-37043: Minor fixes for early release

--- a/en/toc.yaml
+++ b/en/toc.yaml
@@ -331,6 +331,7 @@ items:
                 href: guide/concepts/efficiency-metrics/ban-rate.md
               - name: Communication issues
                 href: guide/concepts/efficiency-metrics/communication.md
+                hidden: true
               - name: Control tasks
                 href: guide/concepts/efficiency-metrics/control-tasks-share.md
               - name: Control task balance
@@ -341,6 +342,7 @@ items:
                 href: guide/concepts/efficiency-metrics/instruction-quality.md
               - name: Quality of interface
                 href: guide/concepts/efficiency-metrics/interface-quality.md
+                hidden: true
               - name: Rejected tasks
                 href: guide/concepts/efficiency-metrics/rejected-tasks.md
               - name: Submission rate
