DOCSUP-36189: Added redirect for deleted page

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -3,6 +3,8 @@ common:
     to: /api/concepts/upload-tasks.md
   - from: /guide/index.md
     to: /index.md
+  - from: /guide/concepts/protect-your-data.md
+    to: /guide/tutorials/data-security.md
 
 ru:
   - from: /api/concepts/download-tasks.md
