--- a/en/toc.yaml
+++ b/en/toc.yaml
@@ -85,10 +85,14 @@ items:
                 href: guide/concepts/appendix-expanded-code.md
       - name: Surveys
         items:
+          - name: Overview of survey solution
+            href: guide/tutorials/overview-of-survey-solutions.md
           - name: Survey with Toloka template
             href: guide/tutorials/questionnaire-toloka.md
           - name: Survey on third-party platform
             href: guide/tutorials/questionnaire-other.md
+          - name: Survey based on Qualtrics
+            href: guide/tutorials/questionnaire-qualtrics.md
       - name: Field tasks
         items:
           - name: Collecting offline data
