--- a/en/toc.yaml
+++ b/en/toc.yaml
@@ -495,6 +495,8 @@ items:
     href: glossary.md
   - name: Changelog
     href: https://toloka.ai/changelog/
+  - name: Data labeling platform
+    href: https://toloka.ai/data-labeling-platform
   - name: Common criteria
     href: guide/concepts/additionals-q.md
     hidden: true
