DOCSUP-38676: Adding new info about A/B experiments

--- a/en/toc.yaml
+++ b/en/toc.yaml
@@ -405,6 +405,8 @@ items:
             href: guide/concepts/multiple-access.md
   - name: Useful recommendations
     items:
+      - name: AB Experiment
+        href: guide/concepts/ab-experiment.md
       - name: Data storage
         items:
           - name: Where to store files
